--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,6 +43,8 @@ body {
     color: transparent;
   }
   .no-calendar:focus::-webkit-datetime-edit {
-    color: black;
+    color: gray;
+    font-style: italic;
+    font-size: small;
   }
 }
